# wall

./: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
data/: wall.db
include/wall/app/: App.hpp  Bootstrap.hpp  ServerContext.hpp
include/wall/config/: WallConfig.hpp
include/wall/domain/: Message.hpp  Presence.hpp  Reaction.hpp  Stats.hpp
include/wall/http/: ApiRoutes.hpp  HealthRoutes.hpp  HttpServer.hpp  PublicRoutes.hpp  RouteRegistrar.hpp
include/wall/json/: EventJson.hpp  MessageJson.hpp  StatsJson.hpp
include/wall/services/: MessageService.hpp  ModerationService.hpp  ReactionService.hpp  StatsService.hpp  WallService.hpp
include/wall/storage/: MessageRepository.hpp  Schema.hpp  Sqlite.hpp  StatsRepository.hpp
include/wall/util/: Clock.hpp  Env.hpp  Ids.hpp  Strings.hpp
include/wall/validation/: PostMessageInput.hpp  ReactInput.hpp  ValidationJson.hpp
include/wall/websocket/: BroadcastService.hpp  PresenceHub.hpp  WallEvents.hpp  WallWebSocket.hpp
src/: main.cpp
src/app/: App.cpp  Bootstrap.cpp  ServerContext.cpp
src/config/: WallConfig.cpp
src/domain/: Message.cpp  Presence.cpp  Reaction.cpp  Stats.cpp
src/http/: ApiRoutes.cpp  HealthRoutes.cpp  HttpServer.cpp  PublicRoutes.cpp  RouteRegistrar.cpp
src/json/: EventJson.cpp  MessageJson.cpp  StatsJson.cpp
src/services/: MessageService.cpp  ModerationService.cpp  ReactionService.cpp  StatsService.cpp  WallService.cpp
src/storage/: MessageRepository.cpp  Schema.cpp  Sqlite.cpp  StatsRepository.cpp
src/util/: Clock.cpp  Env.cpp  Ids.cpp  Strings.cpp
src/validation/: PostMessageInput.cpp  ReactInput.cpp  ValidationJson.cpp
src/websocket/: BroadcastService.cpp  PresenceHub.cpp  WallEvents.cpp  WallWebSocket.cpp
static/: app.js  index.html  style.css
